syntax = "proto3";

package categories;

option go_package = "v1/proto";

message ProductRequest {
    string name = 1;
    string category = 2;
    string description = 3;
    float price = 4;
}

message ProductResponse {
    int32 id = 1;
    string name = 2;
    string category = 3;
    string description = 4;
    float price = 5;
}

message FindProductRequest {
    int32 id = 1;
}

service ProductService {
    rpc Save(ProductRequest) returns (ProductResponse);
    rpc FindById(FindProductRequest) returns (ProductResponse);
}